# infra-terragrunt-examples

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  generate-examples.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml
nextgeninfrastructure/: encoder.py  exceptions.py  generate.py  gitcontext.py  logger.py  processvariables.py
org/nextgeninfrastructure/scripts/: gitcontext.py  logger.py  processvariables.py
